fix vertical align for inline code in mark element

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -609,4 +609,6 @@ mark {
 mark code {
     border: none !important;
     background-color: transparent !important;
+    line-height: 24px;
+    vertical-align: top;
 }
